--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,38 @@
 # Dependencies
-node_modules/
-/.pnp
-.pnp.js
+**/node_modules/
+**/.pnp
+**/.pnp.js
 
 # Testing
-/coverage
+**/coverage
 
 # Next.js
-/.next/
-/out/
+**/.next/
+**/out/
 
 # Production
-/build
-/dist
+**/build
+**/dist
 
 # Misc
-.DS_Store
-*.pem
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/.DS_Store
+**/*.pem
+**/.env
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
 # Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+**/.idea/
+**/.vscode/
+**/*.swp
+**/*.swo
 
 # Vercel
-.vercel
+**/.vercel
