feat: Implement Google Auth and MetaMask integration
- Add Google authentication with Firebase
- Improve MetaMask connection handling
- Add proper error handling for wallet connections
- Update UI to show connection status
- Fix MetaMask popup issues

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@react-google-maps/api": "^2.20.7",
     "@types/react-datepicker": "^6.2.0",
     "@web3-react/core": "^8.2.3",
     "@web3-react/metamask": "^8.2.4",
+    "@web3-react/walletconnect": "^8.2.3",
+    "@web3modal/wagmi": "^3.5.6",
     "ethers": "^5.7.2",
     "firebase": "^11.9.1",
     "next": "^13.4.19",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.16",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/node": "^20.0.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.14",
