--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,8 +18,16 @@
       "paths": {
         "@/*": ["src/*"]
       },
-      "typeRoots": ["./node_modules/@types", "./src/types"]
+      "typeRoots": [
+        "./node_modules/@types",
+        "./src/types"
+      ]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/*.d.ts"],
+    "include": [
+      "next-env.d.ts",
+      "**/*.ts",
+      "**/*.tsx",
+      "src/types/*.d.ts"
+    ],
     "exclude": ["node_modules"]
   }
