--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@web3-react/metamask": "^8.2.4",
     "@web3-react/walletconnect": "^8.2.3",
     "@web3modal/wagmi": "^3.5.6",
+    "date-fns": "^4.1.0",
     "ethers": "^5.7.2",
     "firebase": "^11.9.1",
     "next": "^13.4.19",
@@ -29,12 +30,16 @@
     "wagmi": "^1.4.13"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/firebase": "^2.4.32",
     "@types/node": "^20.11.5",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.14",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
   }
