--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "moment": "^2.30.1",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.3",
