--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@headlessui/react": "^2.2.4",
+    "@metamask/providers": "^22.1.0",
     "@react-google-maps/api": "^2.20.7",
     "@types/react-datepicker": "^6.2.0",
     "@web3-react/core": "^8.2.3",
