Add QR code and PDF generation features with mobile access improvements

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "concurrently": "^8.2.2",
     "ethers": "^5.8.0",
     "eventemitter3": "^5.0.1",
+    "express": "^5.1.0",
     "next": "^15.3.4",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
