--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "ethers": "^5.7.2",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "next": "^13.4.19",
